# flio

./: Cargo.toml  LICENSE  README.md  TODO  connect.pcap  navigation.pcap
smb2/: Cargo.toml
smb2-packet/: Cargo.toml  TODO
smb2-packet/src/: command.rs  header.rs  lib.rs  ntstatus.rs  smb1.rs  transport.rs
smb2-packet/src/command/: close.rs  create.rs  error.rs  flush.rs  logoff.rs  negotiate.rs  read.rs  session_setup.rs  tree_connect.rs  tree_disconnect.rs  write.rs
smb2-packet/tests/: basic.rs  smb1_negot.rs
smb2-packet/tests/common/: mod.rs
smb2-packet/tests/data/: all_requests.pcapng  all_responses.pcapng  header1.pcapng  header2.pcapng  negotiate_request.pcapng  negotiate_response.pcapng  negotiate_with_context_request.pcapng  smb111.pcap  smb1_negot_req_not_supported.pcapng  smb1_negot_req_smb2plus.pcapng
smb2/src/: command.rs  header.rs  lib.rs  ntstatus.rs  parser.rs  smb1.rs  transport.rs
smb2/src/command/: error.rs  negotiate.rs
smb2/tests/: basic.rs  headers.rs  parse.rs  smb1_negot.rs
smb2/tests/common/: mod.rs
smb2/tests/data/: all_requests.pcap  smb1_negot_requests.pcap  smb1_negot_requests.pcapng
src/: main.rs  parser.rs
