[package]
name = "smb2-packet"
description = "SMB2+ binary packets parsing and manipulation."
version = "0.1.0"
edition = "2018"
authors = ["Alexander Theißen <alex@theissen.io>"]
repository = "https://github.com/athei/flio"
license = "MIT"
keywords = ["smb", "samba", "ntlm"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
nom = "4"
bitflags = "1"
num-traits = "0.2"
num-derive = "0.2"

[dev-dependencies]
pcarp = "1"
pnet_packet = "0.22"
lazy_static = "1"
strum = "0.13"
strum_macros = "0.13"
